# semantic_kernel_playground

./: README.md  main.py  pyproject.toml
random_skills/: ai_service.py  app.py
skills/RandomFacts/CountryRandomFact/: config.json  skprompt.txt
